Fix horizontal scrollbar caused by negative-margin elements

--- a/example/www-internal/style/skeleton.css
+++ b/example/www-internal/style/skeleton.css
@@ -140,7 +140,8 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Inter", "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font-family: "Inter", "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  overflow-x: hidden; }
 
 
 /* Typography
